# my-super-app

my-project/: package-lock.json  package.json
my-project/src/: App.css  App.tsx  index.css
my-project/src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
my-project/src-tauri/src/: main.rs
my-project/src/components/: Dashboard.tsx  Generator.tsx  Notes.tsx  Remote.tsx  Shared.tsx  Vault.tsx
