[package]
name = "my-project"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
magic-crypt = "3.1"
# --- جدیدها برای ریموت دسکتاپ ---
local-ip-address = "0.6"
image = "0.24"
base64 = "0.21"
xcap = "0.0.9" # کتابخانه اسکرین‌شات (ممکنه نیاز به نصب پیش‌نیاز داشته باشه)
